# mpl-imageset-demo

./: LICENSE  README.md  image_list.txt  manage_baseline_images.py  pyproject.toml  test.py
plotz/tests/: image_list.txt  test_basic.py  test_other.py
